--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,7 +23,7 @@ main {
 }
 
 .welcome-section {
-  background-image: url("../../assets/pexels-pixabay-208745.jpg");
+  background-image: url("../../../assets/pexels-pixabay-208745.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
