--- a/src/components/FilterComponents/FilterComponent.css
+++ b/src/components/FilterComponents/FilterComponent.css
@@ -43,6 +43,16 @@ input {
   font-size: 1rem;
 }
 
+.select-container {
+  position: relative;
+}
+
+.select-wrapper {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 .select {
   position: absolute;
   top: 49px;
